--- a/Pertemuan_2b.ipynb
+++ b/Pertemuan_2b.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqlyV8mmZcRUwzvgASEzJW",
+      "authorship_tag": "ABX9TyOMfywpoRJi3hp+Be2Cn6Q4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "9F8Nj9k0GEUJ"
+        "id": "9F8Nj9k0GEUJ",
+        "outputId": "d64de9ee-36ef-418b-b764-ca7650142a68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     }
   ]
 }
